# feelpp-core

./: .dir-locals.el  404.html  CMakeLists.txt  CMakePresets.json  Dockerfile  README.adoc  README.md  index.html  package-lock.json  package.json  pyproject.toml  site.yml  sitemap.xml
.github/workflows/: ci.yml  init.yml
cmake/: catch2.patch  cgal.patch  dependencies.cmake  feelpp-coreConfig.cmake.in  importDependenciesHelpers.cmake  importDependenciesPackageConfig.cmake.in  macro.cmake
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
examples/: CMakeLists.txt  feelcore-tui.cpp
feelpp-core/: index.html  overview.html  quickstart.html
feelpp-core/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
feelpp-core/examples/: fin.html  index.html
feelpp-project/: overview.html  quickstart.html
feelpp-project/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
feelpp-project/examples/: fin.html
src/: CMakeLists.txt
src/feel/: CMakeLists.txt
src/feel/feelcore/: CMakeLists.txt  assert.hpp  environment.cpp  environment.hpp  feelcore.hpp  namedarguments.hpp  table.cpp  table.hpp  tabulateinformations.cpp  tabulateinformations.hpp  threadpool.cpp  threadpool.hpp  typetraits.hpp  utilities.hpp
src/feel/feelcore/tui/: CMakeLists.txt  components.cpp  components.hpp  fileinput.cpp  fileinput.hpp  taskmanager.cpp  taskmanager.hpp
tests/: CMakeLists.txt  test-feelcore-table.cpp  test-feelcore-threadpool.cpp  test-ftxui.cpp  test-hdf5.cpp
